--- a/website/index.html
+++ b/website/index.html
@@ -40,15 +40,15 @@
      <div class="tempContainer">
       <div class = "title">Today</div>
 
-      <span id = "temp">5</span><span class="celsius">&#176;C</span>
+      <span id = "temp">5</span><span class="celsius"><sup>&#176;C<sup></span>
       <div id = "description">Clear</div>
       <div id="descriptionImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Antu_weather-clouds.svg/128px-Antu_weather-clouds.svg.png" alt =""/></div>
       <div class="locationContainer"><span class="location"><a href="#" class="fa fa-map-marker"></a></span><span id = "country">Egypt, </span><span id="code">35511</span></div>
      </div>
      <div class="extra">
-    <div class="temp_minC">Minimum<div id = "temp_min">15 &#176;C</div></div>
-    <div class="temp_maxC">Maximum<div id = "temp_max">23 &#176;C</div></div>
-    <div class="humidityC">humidity<div id = "humidity">70 %</div></div>
+    <div class="temp_minC">Minimum<div id = "temp_min" style="color: white; margin-top: .5vw;">15 &#176;C</div></div>
+    <div class="temp_maxC">Maximum<div id = "temp_max" style="color: white; margin-top: .5vw;">23 &#176;C</div></div>
+    <div class="humidityC">humidity<div id = "humidity" style="color: white; margin-top: .5vw;">70 %</div></div>
 
     </div>
       <div id = "content">I Feel Excited</div>
