--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
 <div id = "app">
   <div class="container">
     <div class="headerImage">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Antu_weather-showers-day.svg/256px-Antu_weather-showers-day.svg.png" alt="">
+      <img class="image1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Antu_weather-showers-day.svg/256px-Antu_weather-showers-day.svg.png" alt="">
     </div>
     <div class ="holder headline">
      Weather<p class="journal"> Journal App_<p>
@@ -42,7 +42,7 @@
 
       <span id = "temp">5</span><span class="celsius"><sup>&#176;C<sup></span>
       <div id = "description">Clear</div>
-      <div id="descriptionImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Antu_weather-clouds.svg/128px-Antu_weather-clouds.svg.png" alt =""/></div>
+      <div id="descriptionImage"><img class="image2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Antu_weather-clouds.svg/128px-Antu_weather-clouds.svg.png" alt =""/></div>
       <div class="locationContainer"><span class="location"><a href="#" class="fa fa-map-marker"></a></span><span id = "country">Egypt, </span><span id="code">35511</span></div>
      </div>
      <div class="extra">
